==
  * Bug Fixes
    * Fix redefinition error for time.h and allow it to compile on Ubuntu Edgy [github.com/tbuser]

== 0.7.13 / 2009-05-04
  * Bug Fixes
    * Auto daemonized processes are now stopped/unmonitored correctly [github.com/jcapote]

== 0.7.12 / 2008-12-10
  * Bug Fixes
    * Fix capistrano deployability [github.com/eric]
    * Fix event handling [brianw]

== 0.7.11 / 2008-11-14
  * Bug Fixes
    * Make notifications work inside lifecycle blocks

== 0.7.10 / 2008-11-13
  * Major Enhancements
    * Enable sending of arbitrary signals to a task or group via `god signal`
  * Bug Fixes
    * setup logging *after* loading a given config file when daemonized. 
      enables logging to the 'God.log_file' specified in a config file. [github.com/jnewland]
  * New Conditions
    * FileMtime < PollCondition - trigger on file mtime durations [github.com/jwilkins]
  * New Contacts
    * Twitter - allow messages to twitter [github.com/jwilkins]
    * Campfire - send messages to 37signals' Campfire [github.com/hellvinz]
  * Minor Enhancements
    * Add watch log_cmd that can be reopened with STDOUT instead of a log file [github.com/jberkel]
    * Added webhook output support [Martyn Loughran]

== 0.7.9 / 2008-08-06
  * Major Enhancements
    * Use a psuedo-priority queue for more efficient driver loop [Darrell Kresge]
  * Bug Fixes
    * Fix file_writable? when using chroot [github.com/eric]

== 0.7.8 / 2008-07-09
  * Bug Fixes
    * Catch all Exceptions from HttpResponseCode condition [github.com/rliebling]
    * Don't error out if the process went away in SlashProcPoller [Kevin Clark]
    * Correction of Task#handle_poll to prevent crash under event registration failure conditions. [github.com/raggi]
    * Cleaned up logging of failed e-mail sends. [github.com/raggi]
    * Listen on 127.0.0.1 when using God as a client. [github.com/halorgium]
  * New Behaviors
    * clean_unix_socket [github.com/gma]
  * New Contacts
    * jabber [github.com/jwulff]